--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "body-parser": ">=1.12.3",
     "config": ">=1.12.0",
+    "dateformat": "^3.0.3",
     "errorhandler": ">=1.3.5",
     "eslint": "^4.19.1",
     "express": "=4.12.3",
