--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "async": ">=1.0.0",
     "axios": "^0.18.0",
     "body-parser": ">=1.12.3",
+    "chatwork-client": "^1.0.11",
     "config": ">=1.12.0",
     "dateformat": "^3.0.3",
     "errorhandler": ">=1.3.5",
